# folder-to-md

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  config.py.example  main.py  pyproject.toml  requirements.txt
